Add project files

--- a/dcoker_compose.yml
+++ b/dcoker_compose.yml
@@ -4,40 +4,33 @@ services:
   app:
     build: .
     ports:
-      - "5021:5021"
-    environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/mydb
-      - API_KEY=your_api_key_here
-      - DEBUG=True
-      - HOST=0.0.0.0
-      - PORT=5021
-    depends_on:
-      - db
+      - "60:8000"
     volumes:
       - .:/app
-    restart: unless-stopped
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
 
   db:
     image: postgres:13
     environment:
-      POSTGRES_DB: mydb
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
+      - POSTGRES_DB=transcription_db
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
-
-  nginx:
-    image: nginx:alpine
     ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - app
-    restart: unless-stopped
+      - "5432:5432"
+
+  redis:
+    image: redis:6-alpine
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
